src/test/deca/context/valid/test_pass_2_numerous_method_params.deca
// Description:
//    Program testing pass 2, declare a method with numerous params
//
// Results:
//    ok
//
// History:
//    Created on 17/01/2025


class TypeObject{
    
}

class Test{
    void MethodWithParams(int x, float y, boolean z, TypeObject o){
	
    }
}


